tests/baselines/reference/asyncArrowFunction10_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncArrowFunction10_es5.ts(3,11): error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncArrowFunction10_es5.ts (1 errors) ====
    var foo = async (): Promise<void> => {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?
    }
    